        * Implement a TreeModel that loads the revision data only when a a
          revision is scrolled into view, improving the time it takes to display
          the first screen of data by 92%. (#124143)
        * Add a column to display the revision number. (#64167)
        * Add buttons to navigate to child revisions.
    (Gary van der Merwe)
    
 INTERNALS

  * Use standard version tuple. (Jelmer)

  * Add check command to setup.py. (Jelmer)

0.91.0	2007-09-24

 UI

  * Added keyboard shortcuts for closing windows and exiting Olive.
    (#139559, Daniel Schierbeck)
 
  * The tip revision will be automatically selected in the branch visualization
    window. (#144244, Daniel Schierbeck)
  
  * Updated olive-gtk.desktop: Polish translation and additional categories.
    (Mateusz Korniak)
 
 BUG FIXES

  * Fix the "Complete Diff" entry in DiffWindow to show the whole diff.
    (#140512, James Westby) 
 
  * Right-clicking in Olive's file list works again. (#136310, Mark Lee)
  
  * Annotate context menu works again. (Daniel Schierbeck)
  
  * Fixed push (with overwite) behavior when branches are diverged.
    (Mateusz Korniak)
  
  * Local missing revisions are remote extra revisions (Missing revisions menu
    item in Olive). (Mateusz Korniak)
 
 INTERNALS
 
  * `bzr viz --limit` much more faster than before. (John Arbash Meinel)

  * Use get_apparent_author, rename variables to 'author'. (Aaron Bentley)
  
  * Added default_branch_path to MergeDialog and use it from olive-gtk.
    (Mateusz Korniak)

0.90.0	2007-08-27

 FEATURES

  * Add ability to hide ignored files in Olive (#134121, Tom Badran)

  * Show tags in bzr viz. (Jelmer)

  * Handle large files correctly in Olive. (#127392, Mateusz Korniak)

  * Add remove and delete menu item in Olive. (#127381, Mateusz Korniak)
  
  * Added "update" menu item in Olive. (Mateusz Korniak)
  
  * New Olive application icon. (Simon Pascal Klein and Jakub Steiner)
  